feat: add console comands

--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
                     </div>
                 </div>
             </div>
-            <div class="loggs">
+            <ul class="loggs">
                 LOGS
-            </div>
+            </ul>
         </div>
         <div class="settingsPage" id="settings"></div>
 
