feat: add fight logic

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h1 class="gamePage-title">Registration</h1>
         <ul class="settings">
             <li class="setings__item">
-                <button class="fight-page">Страница Вбой</button>
+                <button class="fight-page">batle page</button>
             </li>
             <li class="setings__item">
                 <button class="settings-btn">Settings</button>
             </li>
             <li class="setings__item">
-                <button class="player-page">Выбор игрока страница</button>
+                <button class="player-page">change the avatar</button>
             </li>
         </ul>
         <div class="music">
