--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
         </ul>
         <div class="music">
-            <audio id="player" controls autoplay loop>
+            <audio id="player" controls autoplay loop muted>
                 <source src="./sounds/mainMenu.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
@@ -249,9 +249,7 @@
             <div class="logs__wrapper">
                 <h2 class="logs__title">BATTLE LOGS</h2>
                 <ul class="logs">
-
                 </ul>
-
             </div>
         </div>
         <div class="settingsPage" id="settings">
@@ -265,7 +263,7 @@
                     </div>
                     <div class="settings__option">
                         <label for="character-name">Change the music</label>
-                        <button class="button">change</button>
+                        <button onclick="nextTrack()" class="button">change</button>
                     </div>
                 </div>
             </div>
