feat: add header title logic

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                             <input class="AttackOption-input" type="radio" data-zone="head" readonly>
                                         </li>
                                         <li class="fight__option">
-                                            <label class="AttackOption-title">Neak</label>
+                                            <label class="AttackOption-title">Neck</label>
                                             <input class="AttackOption-input" type="radio" data-zone="neck" readonly>
                                         </li>
                                         <li class="fight__option">
@@ -212,7 +212,7 @@
                                             <input class="DefenceOption-input" type="radio" data-zone="head" readonly>
                                         </li>
                                         <li class="fight__option">
-                                            <label class="AttackOption-title">Neak</label>
+                                            <label class="AttackOption-title">Neck</label>
                                             <input class="DefenceOption-input" type="radio" data-zone="neck" readonly>
                                         </li>
                                         <li class="fight__option">
@@ -263,7 +263,7 @@
                     </div>
                     <div class="settings__option">
                         <label for="character-name">Change the music</label>
-                        <button onclick="nextTrack()" class="button">change</button>
+                        <button onclick="changeTrack()" class="button">change</button>
                     </div>
                 </div>
             </div>
